[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
block-padding = "0.3.3"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"
fs = "0.0.5"
rand = "0.8.5"
tar = "0.4.43"
zip = "2.2.0"
zip_archive = "1.2.2"
hex-literal = "0.4.1"
cipher = "0.4.4"
ctr = "0.9.2"
hex = "0.4.3"
